feat: Enhance application configuration with actuator support and CORS settings (BUAT DEPLOY)